fix(navigationButtons): now works on smaller screens

--- a/src/abstract/fullyComponents/wheelOfManyImages/navigationButtons/navigationButtons.module.scss
+++ b/src/abstract/fullyComponents/wheelOfManyImages/navigationButtons/navigationButtons.module.scss
@@ -5,31 +5,33 @@
   justify-content: space-between;
 
   width: 97%;
-  height: 100%;
 
   // positioned inside of imagesContainer
   position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
 
   .navigationButtonWrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
 
     &.left {
-      margin-left: 1px;
+      margin-left: 10px;
     }
 
     &.right {
-      margin-right: 1px;
+      margin-right: 10px;
     }
 
     .navigationButton {
       pointer-events: all;
       cursor: pointer;
 
-      height: 100px;
-      width: 50px;
+      height: 8vw;
+      min-height: 50px;
+      width: 100%;
+      min-width: 50px;
 
       border: none;
 
